--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^0.14.5",
     "react-combinators": "^0.3.0",
     "react-dom": "^0.14.2",
+    "react-google-maps": "^4.7.2",
     "serve-static": "^1.10.0",
     "uglifyify": "^3.0.1"
   },
