--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "envify": "^3.4.0",
     "express": "^4.13.4",
     "kefir": "^3.2.0",
-    "kefir-model": "^0.1.2",
+    "kefir.atom": "^0.9.0",
     "less": "^2.6.0",
     "less-plugin-autoprefix": "^1.5.1",
     "lodash": "^4.2.1",
@@ -43,9 +43,9 @@
     "promised-routes": "^0.3.0",
     "ramda": "^0.19.1",
     "react": "^0.14.7",
-    "react-combinators": "^0.3.0",
     "react-dom": "^0.14.7",
     "react-google-maps": "^4.7.2",
+    "react.reactive": "^0.4.0",
     "request": "^2.69.0",
     "serve-static": "^1.10.2",
     "superagent": "^1.7.2",
